AC_INIT(man/hoard.1.md)



AC_OUTPUT( Makerules
Makefile
man/Makefile
man/man1/Makefile
man/man3/Makefile
man/man5/Makefile
man/man8/Makefile
rvm/Makefile
rvm/man/Makefile
rvm/man/man3/Makefile
manual/Makefile
rpc2/Makefile
internals/Makefile
internals/admin/Makefile
internals/backup/Makefile
internals/kernel/Makefile
internals/rpc2/Makefile
internals/rvm/Makefile
internals/security/Makefile
internals/server/Makefile
internals/venus/Makefile
intro/Makefile
cmu/Makefile
 )
